fix(style.css): image align

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/woshiluo/wordpress-theme-simplemd
 Author: Woshiluo
 Author URI: https://blog.woshiluo.com/
 Description: Description
-Version: 1.0.4-2
+Version: 1.0.4-3
 Tested up to: 8.0
 Requires PHP: 5.6
 License: GNU General Public License v3 or later
@@ -35,6 +35,11 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 .cat-href, .cat-href:hover, .cat-href:visited, .cat-href:active {
 	text-decoration: none;
 	color: black;
+}
+.wp-block-image {
+	display: block!important;
+	margin-left: auto!important;
+	margin-right: auto!important;
 }
 
 /***
